# pymoca_fmu

./: .gitignore  CMakeLists.txt  README.md  generate.py
cmake/: Findsundials.cmake
src/: Ball.mo  main.cpp
